[gd_scene load_steps=2 format=3 uid="uid://fw3qhtuvjjyp"]

[ext_resource type="Script" path="res://win.gd" id="1_0m7mk"]

[node name="win" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0m7mk")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_left = -140.0
offset_top = -83.0
offset_right = 144.0
offset_bottom = 91.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 283.0
offset_bottom = 175.0
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "You won!
 "
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Sword level
        "
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Wave level
         "

[node name="Label3" type="Label" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fireball level
        "

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="Button" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Play again?"

[node name="Button2" type="Button" parent="Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/HBoxContainer2/Button2" to="." method="_on_button_2_pressed"]
